[package]
name = "advent_of_code_22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
criterion = "0.4.0"
fixedbitset = "0.4.2"
itertools = "0.10.5"

[[bench]]
name = "benchmark"
harness = false
